<resources>
    <string name="app_name">AppNet Browser</string>
    <string name="server_list_connecting">Connecting to Central Server...</string>
    <string name="server_list_connected">App list:</string>
    <string name="server_list_not_available">Can\'t connect to central server :(</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>


    <string name="large_text">Text Large</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>





    <!-- Nearby Fragment -->
    <string name="nearby_fragment_actionbar_title">Nearby</string>
        <string name="proxy_app_list_title">Apps in your proximity:</string>
        <string name="nearby_app_list_title">Other nearby Apps:</string>
    <!-- Favourites Fragment -->
    <string name="favourites_fragment_actionbar_title">Favourites</string>
        <string name="tv_favourite_list">Favourite Apps:</string>
        <string name="add_to_favorites">Add to Favorites</string>

    <!-- Map Fragment -->
    <string name="map_fragment_actionbar_title">Map</string>

    <!-- WebApp Fragment -->
    <string name="webapp_fragment_actionbar_title">WebApp</string>



    <!-- Menus -->
    <string name="menu_add_to_favorites">Add to Favorites</string>
    <string name="menu_close_webapp">Close WebApp</string>
    <string name="menu_fullscreen">Fullscreen</string>
    <string name="menu_marker_info">WebApp Info</string>
    <string name="menu_marker_play">Run WebApp</string>


    <!--APP DETAILS FRAGMENT -->
    <string name="app_info_label">App Info</string>
    <string name="app_info_ID">ID</string>
    <string name="app_info_name">Name</string>
    <string name="app_info_version_name">Version</string>
    <string name="app_info_version_code">Version Code</string>

    <string name="app_gps_info_label">App GPS info</string>
    <string name="app_gps_info_lat">Latitude</string>
    <string name="app_gps_info_lng">Longitude</string>

    <string name="app_beacon_info_label">App Beacon info</string>
    <string name="app_beacon_info_eddystone_UID_namespace">Eddiston Namespace</string>
    <string name="app_beacon_info_eddystone_UID_instance">Eddiston Instance</string>

    <string name="app_beacon_info_ibracon_UUID">iBeacon UUID</string>
    <string name="app_beacon_info_ibeacon_minor">iBeacon Minor</string>
    <string name="app_beacon_info_ibeacon_major">iBeacon Major</string>
    <string name="title_activity_beacon_test">BeaconTestActivity</string>


</resources>
