<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_favourites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_add_to_favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_fullscreen"
        android:icon="@drawable/ic_up_down_arrows_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_fullscreen"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_close"
        android:icon="@drawable/ic_close_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_close_webapp"
        app:showAsAction="always" />
</menu>
