<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_list_layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view_app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tab_layout"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp"
                card_view:contentPadding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/app_info_label"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:typeface="normal" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tab_layout">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_info_ID"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:textSize="18sp"
                                android:id="@+id/etAppInfoID" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_info_name"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppInfoName" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_info_version_name"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppInfoVersionName" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_info_version_code"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppInfoVersionCode" />
                        </TableRow>


                    </TableLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_app_localization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_view_app_info"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                card_view:cardCornerRadius="4dp"
                card_view:contentPadding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/app_gps_info_label"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:typeface="normal" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tab_layout">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_gps_info_lat"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:textSize="18sp"
                                android:id="@+id/etAppGpsLatitude" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_gps_info_lng"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppGpsLongitude" />
                        </TableRow>

                    </TableLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_app_beacon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_view_app_localization"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                card_view:cardCornerRadius="4dp"
                card_view:contentPadding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/app_beacon_info_label"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:typeface="normal" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tab_layout">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_beacon_info_eddystone_UID_namespace"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:textSize="18sp"
                                android:id="@+id/etAppBeaconNamespace" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_beacon_info_eddystone_UID_instance"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppBeaconInstance" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_beacon_info_ibeacon_major"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppBeaconMajor" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_beacon_info_ibeacon_minor"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppBeaconMinor" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/app_info_element_padding_right"
                                android:text="@string/app_beacon_info_ibracon_UUID"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="Name"
                                android:id="@+id/etAppBeaconUUID" />
                        </TableRow>


                    </TableLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
